@@ -62,13 +62,13 @@
    <xsl:if test="item/@web or item/@webPage">
     <tc:field flags="0" title="URL" category="General" format="4" type="7" name="url" i18n="true"/>
    </xsl:if>
-   <xsl:if test="item/@location">
+   <xsl:if test="item/@location and $coll != 7">
      <tc:field flags="6" title="Location" category="Personal" format="4" type="1" name="location" i18n="true"/>
    </xsl:if>
    <xsl:if test="item/@composer">
     <tc:field flags="7" title="Composer" category="General" format="2" type="1" name="composer" i18n="true"/>
    </xsl:if>
-   <xsl:if test="item/@producer">
+   <xsl:if test="item/@producer and @type != 'GCwines'">
     <tc:field flags="7" title="Producer" category="General" format="2" type="1" name="producer" i18n="true"/>
    </xsl:if>
    <xsl:choose>
@@ -80,6 +80,14 @@
      <!-- gcstar includes way more coin grades than tellico -->
      <tc:field flags="2" title="Grade" category="General" format="4" type="3" name="grade"
                allowed="Proof-65;Proof-60;Mint State-70;Mint State-69;Mint State-68;Mint State-67;Mint State-66;Mint State-65;Mint State-64;Mint State-63;Mint State-62;Mint State-61;Mint State-60;Almost Uncirculated-58;Almost Uncirculated-55;Almost Uncirculated-53;Almost Uncirculated-50;Extremely Fine-45;Extremely Fine-40;Very Fine-35;Very Fine-30;Very Fine-25;Very Fine-20;Fine-15;Fine-12;Very Good-10;Very Good-8;Good-6;Good-4;Fair"/>
+    </xsl:when>
+    <xsl:when test="@type='GCwines'">
+     <tc:field title="Varietal" flags="7" category="General" format="0" type="1" name="varietal" i18n="true"/>
+     <tc:field flags="0" title="Tasted" category="Personal" format="4" type="4" name="tasted" i18n="true"/>
+     <tc:field flags="6" title="Distinction" category="General" format="4" type="1" name="distinction" i18n="true"/>
+     <tc:field flags="6" title="Soil" category="General" format="4" type="1" name="soil" i18n="true"/>
+     <tc:field flags="6" title="Alcohol" category="General" format="4" type="1" name="alcohol" i18n="true"/>
+     <tc:field flags="6" title="Volume" category="General" format="4" type="1" name="volume" i18n="true"/>
     </xsl:when>
    </xsl:choose>
   </tc:fields>
@@ -116,7 +124,7 @@
 <xsl:template match="*"/>
 
 <!-- the easy one matches identical local names -->
-<xsl:template match="title|isbn|edition|pages|label|platform|location">
+<xsl:template match="title|isbn|edition|pages|label|platform|location|vintage|quantity|soil|alcohol|volume">
  <xsl:element name="{concat('tc:',local-name())}">
   <xsl:value-of select="."/>
  </xsl:element>
@@ -126,11 +134,14 @@
  <tc:origtitle><xsl:value-of select="."/></tc:origtitle>
 </xsl:template>
 
-<xsl:template match="author|authors|language|genre|artist|composer|producer|developer">
+<xsl:template match="author|authors|language|genre|artist|composer|producer|developer|grapes">
  <xsl:variable name="tag">
   <xsl:choose>
    <xsl:when test="local-name() = 'authors'">
     <xsl:text>author</xsl:text>
+   </xsl:when>
+   <xsl:when test="local-name() = 'grapes'">
+    <xsl:text>varietal</xsl:text>
    </xsl:when>
    <xsl:otherwise>
     <xsl:value-of select="local-name()"/>
@@ -139,6 +150,11 @@
  </xsl:variable>
 
  <xsl:choose>
+  <xsl:when test="$tag='producer' and $coll = 7">
+   <tc:producer>
+    <xsl:value-of select="normalize-space(.)"/>
+   </tc:producer>
+  </xsl:when>
   <xsl:when test="line">
    <xsl:element name="{concat('tc:',$tag,'s')}">
     <xsl:for-each select="line">
@@ -199,7 +215,7 @@
 </xsl:template>
 
 <xsl:template match="country">
- <xsl:if test="$coll != 8">
+ <xsl:if test="$coll != 7 and $coll != 8">
   <tc:nationalitys>
    <xsl:for-each select="str:tokenize(., ',/;')">
     <tc:nationality i18n="true">
@@ -208,8 +224,10 @@
    </xsl:for-each>
   </tc:nationalitys>
  </xsl:if>
- <xsl:if test="$coll = 8">
-  <tc:country><xsl:value-of select="."/></tc:country>
+ <xsl:if test="$coll = 7 or $coll = 8">
+  <tc:country>
+   <xsl:value-of select="."/>
+  </tc:country>
  </xsl:if>
 </xsl:template>
 
@@ -350,7 +368,7 @@
  </tc:pub_year>
 </xsl:template>
 
-<xsl:template match="aquisition">
+<xsl:template match="aquisition|purchasedate">
  <tc:pur_date><xsl:value-of select="."/></tc:pur_date>
 </xsl:template>
 
@@ -361,9 +379,9 @@
  <xsl:variable name="numbers" select="str:tokenize(., '/-')"/>
  <xsl:if test="count($numbers)=3">
   <tc:cdate calendar="gregorian" >
-    <tc:year><xsl:value-of  select="$numbers[3]"/></tc:year>
-    <tc:month><xsl:value-of  select="$numbers[2]"/></tc:month>
-    <tc:day><xsl:value-of  select="$numbers[1]"/></tc:day>
+    <tc:year><xsl:value-of select="$numbers[3]"/></tc:year>
+    <tc:month><xsl:value-of select="$numbers[2]"/></tc:month>
+    <tc:day><xsl:value-of select="$numbers[1]"/></tc:day>
    </tc:cdate>
  </xsl:if>
 </xsl:template>
@@ -383,7 +401,7 @@
  </tc:comments>
 </xsl:template>
 
-<xsl:template match="description">
+<xsl:template match="description|tasting">
  <xsl:if test="$coll != 2">
   <tc:description><xsl:value-of select="."/></tc:description>
  </xsl:if>
@@ -463,7 +481,7 @@
  <tc:denomination><xsl:value-of select="."/></tc:denomination>
 </xsl:template>
 
-<xsl:template match="estimate">
+<xsl:template match="estimate|purchaseprice">
  <tc:pur_price><xsl:value-of select="."/></tc:pur_price>
 </xsl:template>
 
@@ -556,6 +574,41 @@
    <xsl:when test=".&lt;4">Fair</xsl:when>
   </xsl:choose>
  </tc:grade>
+</xsl:template>
+
+<xsl:template match="designation">
+ <tc:appellation><xsl:value-of select="."/></tc:appellation>
+</xsl:template>
+
+<xsl:template match="type">
+ <tc:type i18n="true">
+  <xsl:choose>
+   <xsl:when test="contains(.,'red')">Red Wine</xsl:when>
+   <xsl:when test="contains(.,'white')">White Wine</xsl:when>
+   <xsl:when test="contains(.,'champagne') or contains(.,'sparking')">Sparkling Wine</xsl:when>
+   <xsl:otherwise><xsl:value-of select="."/></xsl:otherwise>
+  </xsl:choose>
+ </tc:type>
+</xsl:template>
+
+<xsl:template match="medal">
+ <tc:distinction><xsl:value-of select="."/></tc:distinction>
+</xsl:template>
+
+<xsl:template match="bottlelabel">
+ <tc:label><xsl:value-of select="."/></tc:label>
+</xsl:template>
+
+<xsl:template match="gift">
+ <xsl:if test="string-length(.) &gt; 0 and . != 'false' and . != '0'">
+  <tc:gift>true</tc:gift>
+ </xsl:if>
+</xsl:template>
+
+<xsl:template match="tasted">
+ <xsl:if test="string-length(.) &gt; 0 and . != 'false' and . != '0'">
+  <tc:tasted>true</tc:tasted>
+ </xsl:if>
 </xsl:template>
 
 <xsl:template name="year">
